--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "description": "The official low-level Elasticsearch client for Node.js and the browser.",
   "main": "src/elasticsearch.js",
   "homepage": "http://www.elastic.co/guide/en/elasticsearch/client/javascript-api/current/index.html",
-  "version": "14.0.0",
+  "version": "14.0.0-patch-chalk",
   "keywords": [
     "elasticsearch",
     "mapping",
@@ -97,7 +97,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "agentkeepalive": "^2.2.0",
-    "chalk": "^1.0.0",
+    "chalk": "1.1.3-patch-escape-string-regexp-throws",
     "lodash": "2.4.2",
     "lodash.get": "^4.4.2",
     "lodash.isempty": "^4.4.0",
